WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95037
[Qt] REGRESSION(
r126694
): It broke the debug build
https://bugs.webkit.org/show_bug.cgi?id=95037
Summary
[Qt] REGRESSION(r126694): It broke the debug build
Csaba Osztrogonác
Reported
2012-08-26 12:41:28 PDT
cc1plus: warnings being treated as errors /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/Source/WebCore/platform/graphics/texmap/TextureMapperShaderManager.cpp: In constructor 'WebCore::StandardFilterProgram::StandardFilterProgram(WebCore::GraphicsContext3D*, WebCore::FilterOperation::OperationType, unsigned int)': [1;31m/home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/Source/WebCore/platform/graphics/texmap/TextureMapperShaderManager.cpp:610: error: cannot pass objects of non-POD type 'class WTF::String' through '...'; call will abort at runtime[0m [1;31m/home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/Source/WebCore/platform/graphics/texmap/TextureMapperShaderManager.cpp:610: error: format '%s' expects type 'char*', but argument 3 has type 'int'[0m Could you check and fix it, please?
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-08-27 00:31:53 PDT
Committed
r126731
: <
http://trac.webkit.org/changeset/126731
>
Csaba Osztrogonác
Comment 2
2012-08-29 21:35:13 PDT
(In reply to
comment #1
)
> Committed
r126731
: <
http://trac.webkit.org/changeset/126731
>
Relanded in
https://trac.webkit.org/changeset/127096
(Because the original patch and this fix was reverted for some reason.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug