[Qt] REGRESSION(r126694): It broke the debug build https://bugs.webkit.org/show_bug.cgi?id=95037

Unreviewed trivial build fix for debug builds.

Don't pass WTFStrings through printf, use .ascii().data().

* platform/graphics/texmap/TextureMapperShaderManager.cpp:
(WebCore::StandardFilterProgram::StandardFilterProgram):

git-svn-id: svn://svn.chromium.org/blink/trunk@126731 bbb929c8-8fbe-4397-9dbb-9b2b20218538